force-app/main/default/objects/Data_Object_Record_Type__c/Data_Object_Record_Type__c.object-meta.xml
<CustomObject>
    <label>Data Object Record Type</label>
    <nameField>
        <label>Data Object Record Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Object Record Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>