force-app/main/default/objects/Data_Object_Record_Type__c/fields/Business_Process_Id__c.field-meta.xml
<CustomField>
    <fullName>Business_Process_Id__c</fullName>
    <label>Business Process Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>