force-app/main/default/objects/Data_Object_Record_Type__c/fields/Created_By_Id__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Id__c</fullName>
    <label>Created By Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>