force-app/main/default/objects/Data_Object_Record_Type__c/fields/Created_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Name__c</fullName>
    <label>Created By Name</label>
    <type>TextArea</type>
</CustomField>