force-app/main/default/objects/Data_Object_Record_Type__c/fields/Data_Object__c.field-meta.xml
<CustomField>
    <fullName>Data_Object__c</fullName>
    <label>Data Object</label>
    <referenceTo>Data_Object__c</referenceTo>
    <relationshipLabel>Data Object Record Types</relationshipLabel>
    <relationshipName>Data_Object_Record_Types</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>