force-app/main/default/objects/Data_Object_Record_Type__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>