force-app/main/default/objects/Data_Object_Record_Type__c/fields/Is_Person_Type__c.field-meta.xml
<CustomField>
    <fullName>Is_Person_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Person Type</label>
    <type>Checkbox</type>
</CustomField>