force-app/main/default/objects/Data_Object_Record_Type__c/fields/Last_Modified_By_Id__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By_Id__c</fullName>
    <label>Last Modified By Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>