force-app/main/default/objects/Data_Object_Record_Type__c/fields/Last_Modified_By_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By_Name_Text__c</fullName>
    <label>Last Modified By Name</label>
    <type>TextArea</type>
</CustomField>