force-app/main/default/objects/Data_Object_Record_Type__c/fields/Namespace_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Namespace_Prefix__c</fullName>
    <label>Namespace Prefix</label>
    <length>80</length>
    <type>Text</type>
</CustomField>