force-app/main/default/objects/Data_Object_Record_Type__c/fields/Sobject_Type__c.field-meta.xml
<CustomField>
    <fullName>Sobject_Type__c</fullName>
    <label>Sobject Type</label>
    <type>TextArea</type>
</CustomField>