force-app/main/default/objects/Data_Object_Record_Type__c/fields/System_Modstamp__c.field-meta.xml
<CustomField>
    <fullName>System_Modstamp__c</fullName>
    <label>System Modstamp</label>
    <type>DateTime</type>
</CustomField>